<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/add_actvity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AddMeeting">

            <include layout="@layout/toolbar_layout_save" />

            <EditText
                android:id="@+id/edit_text_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter meeting Subject"
                android:inputType="text"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/edit_text_start_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="33sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  ====>  "
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:translationY="-5dp"/>

                <TextView
                    android:id="@+id/edit_text_end_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="33sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:baselineAligned="true"

                >

                <Button
                    android:id="@+id/set_start_hour_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set Start Hour"
                    android:layout_gravity="center"
                    android:layout_marginEnd="22dp"/>

                <Button
                    android:id="@+id/set_end_hour_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set End Hour"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_select_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Meeting Room"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                />






            <Button
                android:id="@+id/btn_add_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Participant"
                android:layout_gravity="bottom|center"
               android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:contentDescription="Add participant" />

            <TextView
                android:id="@+id/text_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="List of participants :"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAddParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="4"
                tools:listitem="@layout/participant_item"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_save_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_save"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:onClick="saveMeeting"
                android:layout_gravity="center"/>

        </LinearLayout>




    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/toolbar_layout_save" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>
