<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="68dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="40dp"
                app:layout_anchorGravity="center"
                tools:listitem="@layout/meeting_item" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white" />

    <include layout="@layout/toolbar_layout_main" />

</RelativeLayout>
